src/unit_tests/Custom/type_checker/success/self_type.cl
class Main inherits IO {
    a : SELF_TYPE <- self;
    
    main(): SELF_TYPE {
        out_string("Hello, World.\n")
    };
};