src/unit_tests/Custom/type_checker/fail/assign.cl
class Main inherits IO {
    a: Int;

    main(): Int { a <- "w" };
};
